# corvus-agent

./: CMakeLists.txt  README.md
.corvus/audit/: latest.jsonl
app/: main.cpp
src/audit/: AuditEvent.cpp  AuditEvent.hpp  AuditLog.cpp  AuditLog.hpp  AuditLogFactory.cpp  AuditLogFactory.hpp
src/cli/: CliApp.cpp  CliApp.hpp
src/commands/: Command.hpp  CommandExecutor.cpp  CommandExecutor.hpp  CommandParser.cpp  CommandParser.hpp
src/core/: AgentConfig.cpp  AgentConfig.hpp  AgentEvent.cpp  AgentEvent.hpp  AgentRuntime.cpp  AgentRuntime.hpp  AgentState.cpp  AgentState.hpp  StateTransition.cpp  StateTransition.hpp
src/project/: ProjectScanner.cpp  ProjectScanner.hpp
src/safety/: RiskLevel.cpp  RiskLevel.hpp  SafetyEngine.cpp  SafetyEngine.hpp  SafetyPolicy.cpp  SafetyPolicy.hpp
src/tools/: DefaultTools.cpp  DefaultTools.hpp  EchoTool.cpp  EchoTool.hpp  ListFilesTool.cpp  ListFilesTool.hpp  ReadFileTool.cpp  ReadFileTool.hpp  Tool.hpp  ToolRegistry.cpp  ToolRegistry.hpp
src/tui/: TuiApp.cpp  TuiApp.hpp
tests/: AgentConfigTests.cpp  AgentStateMachineTests.cpp  AuditLogTests.cpp  CommandParserTests.cpp  ProjectScannerTests.cpp  SafetyEngineTests.cpp  ToolRegistryTests.cpp
